--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
     <title>Test</title>
 </head>
 <body>
-<h1>Test</h1>
+<p>Test</p>
 </body>
 </html>
